# orbit-digest

./: .gitignore  README.md  calendar-digest-prd.md  env.example  pyproject.toml
.github/workflows/: calendar-digest.yml
src/: __init__.py  calendar.py  email_sender.py  formatter.py  main.py  utils.py
tests/: __init__.py  test_calendar.py  test_email_sender.py  test_formatter.py  test_main.py  test_utils.py
